--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@
 blockquote {
   @apply text-xl italic border-l-4 border-blue-600 pl-4 text-gray-700;
 }
+
+.tile-block {
+  display: inline-block;
+  cursor: pointer;
+}
